responsive property form

--- a/markup/css/add-property-form.css
+++ b/markup/css/add-property-form.css
@@ -1,4 +1,4 @@
-.addPropertyFormContainer .section-listing, .addPropertyFormContainer .tabset, .addPropertyFormContainer .property-add .radio-holder, .addPropertyFormContainer .feature-list, .addPropertyFormContainer .image-uploading-area {
+.addPropertyFormContainer .errors ul, .addPropertyFormContainer .section-listing, .addPropertyFormContainer .tabset, .addPropertyFormContainer .property-add .radio-holder, .addPropertyFormContainer .feature-list, .addPropertyFormContainer .image-uploading-area {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -21,10 +21,87 @@
 /*Add a property full form*/
 .addPropertyFormContainer {
   transition: padding 0.5s ease;
+  -webkit-transition: padding 0.5s ease;
+  -ms-transition: padding 0.5s ease;
+  -moz-transition: padding 0.5s ease;
+  position: relative;
+  overflow: hidden;
 }
 
 .sideBar-active .addPropertyFormContainer {
-  padding: 0 10px 0 290px;
+  padding: 0 10px 0 300px;
+}
+
+@media (max-width: 1023px) {
+  .sideBar-active .addPropertyFormContainer {
+    padding: 0 10px 0 245px;
+  }
+}
+
+@media (max-width: 767px) {
+  .sideBar-active .addPropertyFormContainer {
+    padding: 0;
+  }
+}
+
+.sideBar-active.sideBar-active .addPropertyFormContainer:after {
+  left: 300px;
+}
+
+@media (max-width: 1023px) {
+  .sideBar-active.sideBar-active .addPropertyFormContainer:after {
+    left: 250px;
+  }
+}
+
+.please-wait .addPropertyFormContainer {
+  height: 100vh;
+}
+
+.please-wait .addPropertyFormContainer:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  background: rgba(255, 255, 255, 0.9);
+  content: '';
+  transition: left 0.4s ease;
+  -webkit-transition: left 0.4s ease;
+  -moz-transition: left 0.4s ease;
+  -ms-transition: left 0.4s ease;
+}
+
+.please-wait .addPropertyFormContainer:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: url("../images/rolling.gif") no-repeat;
+  background-size: 100% , 100%;
+  z-index: 991;
+  content: 'Please wait...';
+  width: 100px;
+  height: 100px;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 600;
+  margin: -150px 0 0;
+  text-align: center;
+  padding: 120px 0 0 10px;
+  color: #737373;
+}
+
+@media (max-width: 1424px) {
+  .please-wait .addPropertyFormContainer:before {
+    margin: -150px 0 0 100px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .please-wait .addPropertyFormContainer:before {
+    margin: -150px 0 0 -55px;
+  }
 }
 
 .addPropertyFormContainer.sectionListingActive .section-listing {
@@ -39,6 +116,12 @@
   padding: 75px 20px 0;
 }
 
+@media (max-width: 767px) {
+  .addPropertyFormContainer .attactment-block, .addPropertyFormContainer .basics-block, .addPropertyFormContainer .feature-block, .addPropertyFormContainer .contact-information {
+    padding: 75px 10px 0;
+  }
+}
+
 @media (max-width: 1023px) {
   .addPropertyFormContainer .select2-container {
     min-width: 190px;
@@ -50,6 +133,59 @@
     margin: 0;
     min-width: inherit;
     width: 100%;
+  }
+}
+
+.addPropertyFormContainer .errors {
+  overflow: hidden;
+}
+
+.addPropertyFormContainer .errors ul {
+  font-size: 0;
+  line-height: 0;
+  letter-spacing: -4px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.addPropertyFormContainer .errors ul > * {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 14px;
+  line-height: 15px;
+  letter-spacing: 0;
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .errors ul {
+    font-size: 0;
+    line-height: 0;
+    letter-spacing: -4px;
+  }
+  .addPropertyFormContainer .errors ul > * {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0;
+  }
+}
+
+.addPropertyFormContainer .errors ul li {
+  width: 30%;
+  padding: 7px;
+  border-radius: 4px;
+  color: #e14646;
+  margin: 0 5px 10px;
+  border: 1px solid #e14646;
+  background: #fae0e0;
+  text-align: center;
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .errors ul li {
+    padding: 5px;
+    width: 45%;
   }
 }
 
@@ -99,6 +235,10 @@
   letter-spacing: -4px;
   position: relative;
   background: #dde2e8;
+  transition: padding 0.4s ease;
+  -webkit-transition: padding 0.4s ease;
+  -moz-transition: padding 0.4s ease;
+  -ms-transition: padding 0.4s ease;
 }
 
 .addPropertyFormContainer .section-listing > * {
@@ -111,6 +251,22 @@
 
 .sideBar-active .addPropertyFormContainer .section-listing {
   padding: 0 0 0 300px;
+}
+
+@media (max-width: 1023px) {
+  .sideBar-active .addPropertyFormContainer .section-listing {
+    padding: 0 0 0 250px;
+    font-size: 0;
+    line-height: 0;
+    letter-spacing: -4px;
+  }
+  .sideBar-active .addPropertyFormContainer .section-listing > * {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -126,6 +282,9 @@
     height: 0;
     overflow: auto;
     transition: z-index 0.5s ease, max-height 0.5s ease, opacity 0.5s ease, visibility 0.5s ease, height 0.5s ease;
+    -webkit-transition: z-index 0.5s ease, max-height 0.5s ease, opacity 0.5s ease, visibility 0.5s ease, height 0.5s ease;
+    -moz-transition: z-index 0.5s ease, max-height 0.5s ease, opacity 0.5s ease, visibility 0.5s ease, height 0.5s ease;
+    -ms-transition: z-index 0.5s ease, max-height 0.5s ease, opacity 0.5s ease, visibility 0.5s ease, height 0.5s ease;
   }
 }
 
@@ -181,13 +340,19 @@
 
 @media (max-width: 1599px) {
   .addPropertyFormContainer .section-listing li a {
-    padding: 15px 66px;
+    padding: 15px 58px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .section-listing li a {
+    padding: 15px 45px;
   }
 }
 
 @media (max-width: 1023px) {
   .addPropertyFormContainer .section-listing li a {
-    padding: 15px 45px;
+    padding: 15px 30px;
   }
 }
 
@@ -201,6 +366,9 @@
   z-index: -1;
   content: '';
   transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
 }
 
 .addPropertyFormContainer .section-listing li a [class^="icon-"], .addPropertyFormContainer .section-listing li a [class*="icon-"] {
@@ -210,15 +378,39 @@
   margin: -11px 0 0;
 }
 
+@media (max-width: 1599px) {
+  .addPropertyFormContainer .section-listing li a [class^="icon-"], .addPropertyFormContainer .section-listing li a [class*="icon-"] {
+    left: 25px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .section-listing li a [class^="icon-"], .addPropertyFormContainer .section-listing li a [class*="icon-"] {
+    left: 15px;
+  }
+}
+
 @media (max-width: 1023px) {
   .addPropertyFormContainer .section-listing li a [class^="icon-"], .addPropertyFormContainer .section-listing li a [class*="icon-"] {
-    left: 9px;
+    left: 5px;
+  }
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .section-listing li a [class^="icon-"], .addPropertyFormContainer .section-listing li a [class*="icon-"] {
+    left: 35px;
   }
 }
 
 .addPropertyFormContainer .section-listing li a [class^="icon-"]:before, .addPropertyFormContainer .section-listing li a [class*="icon-"]:before {
   font-size: 25px;
   line-height: 1;
+}
+
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .section-listing li a [class^="icon-"]:before, .addPropertyFormContainer .section-listing li a [class*="icon-"]:before {
+    font-size: 20px;
+  }
 }
 
 .addPropertyFormContainer .tabset {
@@ -260,6 +452,9 @@
   position: relative;
   text-decoration: none;
   transition: color 0.4s ease;
+  -webkit-transition: color 0.4s ease;
+  -moz-transition: color 0.4s ease;
+  -ms-transition: color 0.4s ease;
 }
 
 .addPropertyFormContainer .tabset li a .round {
@@ -269,10 +464,12 @@
   height: 20px;
   border: 2px solid #606060;
   margin: -2px 4px 0 0;
-  transition: all 0.4s ease;
   content: '';
   position: relative;
   transition: border 0.4s ease;
+  -webkit-transition: border 0.4s ease;
+  -moz-transition: border 0.4s ease;
+  -ms-transition: border 0.4s ease;
 }
 
 .addPropertyFormContainer .tabset li a .round:after {
@@ -329,12 +526,21 @@
   outline: none;
 }
 
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .property-add input[type="text"],
+  .addPropertyFormContainer .property-add input[type="search"],
+  .addPropertyFormContainer .property-add input[type="number"],
+  .addPropertyFormContainer .property-add input[type="email"] {
+    max-width: 185px;
+  }
+}
+
 @media (max-width: 1023px) {
   .addPropertyFormContainer .property-add input[type="text"],
   .addPropertyFormContainer .property-add input[type="search"],
   .addPropertyFormContainer .property-add input[type="number"],
   .addPropertyFormContainer .property-add input[type="email"] {
-    max-width: 190px;
+    max-width: 115px;
   }
 }
 
@@ -383,6 +589,9 @@
   right: -100px;
   margin: -9px 0 0;
   transition: right 0.4s ease;
+  -webkit-transition: right 0.4s ease;
+  -moz-transition: right 0.4s ease;
+  -ms-transition: right 0.4s ease;
 }
 
 .addPropertyFormContainer .property-add button[type="submit"] [class^="icon"]:before, .addPropertyFormContainer .property-add button[type="submit"] [class*="icon"]:before {
@@ -400,6 +609,9 @@
   z-index: -1;
   content: '';
   transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
 }
 
 .addPropertyFormContainer .property-add button[type="submit"]:hover:after {
@@ -431,9 +643,15 @@
   padding: 10px;
 }
 
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .property-add textarea {
+    max-width: 523px;
+  }
+}
+
 @media (max-width: 1023px) {
   .addPropertyFormContainer .property-add textarea {
-    max-width: 565px;
+    max-width: 350px;
   }
 }
 
@@ -498,6 +716,7 @@
   font-size: 0;
   line-height: 0;
   letter-spacing: -4px;
+  text-transform: capitalize;
 }
 
 .addPropertyFormContainer .property-add .radio-holder > * {
@@ -587,7 +806,7 @@
 .addPropertyFormContainer .property-add .layout .layout-holder {
   float: left;
   width: 50%;
-  margin: 0 auto;
+  margin: 0 auto 10px;
 }
 
 @media (max-width: 767px) {
@@ -645,6 +864,13 @@
   border-bottom: 1px solid #adadad;
   padding: 0 0 5px;
   margin: 30px 0 0;
+}
+
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .form-heading {
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 
 .addPropertyFormContainer .form-heading span {
@@ -711,20 +937,77 @@
 }
 
 .addPropertyFormContainer .feature-list li {
-  padding: 0 30px 15px;
+  padding: 0 10px 15px;
+  width: 25%;
+}
+
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .feature-list li {
+    width: 33.33%;
+    padding: 0 5px 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .feature-list li {
+    width: 50%;
+  }
 }
 
 .addPropertyFormContainer .feature-list li label {
   text-transform: capitalize;
   cursor: pointer;
-  display: inline-block;
-  vertical-align: middle;
+  float: left;
+  width: 35%;
+  padding: 5px 0 0;
 }
 
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .feature-list li label {
+    width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .feature-list li label {
+    float: left;
+  }
+}
+
+.addPropertyFormContainer .feature-list li select,
+.addPropertyFormContainer .feature-list li input[type="text"], .addPropertyFormContainer .feature-list li input[type="search"], .addPropertyFormContainer .feature-list li input[type="email"], .addPropertyFormContainer .feature-list li input[type="password"], .addPropertyFormContainer .feature-list li input[type="number"], .addPropertyFormContainer .feature-list li input[type="tel"] {
+  margin: 0;
+  width: 100%;
+  height: 25px;
+  max-width: inherit;
+  padding: 3px 10px;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.addPropertyFormContainer .feature-list li .input-holder {
+  padding: 0 0 0 10px;
+  width: 65%;
+}
+
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .feature-list li .input-holder {
+    width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .feature-list li .input-holder {
+    float: left;
+  }
+}
+
+.addPropertyFormContainer .feature-list li input[type="radio"],
 .addPropertyFormContainer .feature-list li input[type="checkbox"] {
   cursor: pointer;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: bottom;
+  margin: 7px 0 0;
 }
 
 .addPropertyFormContainer .image-uploading-area {
@@ -752,13 +1035,19 @@
 .addPropertyFormContainer .image-uploading-area li {
   width: 25%;
   position: relative;
-  padding: 10px 0;
+  padding: 10px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .image-uploading-area li {
+    width: 33.33%;
+    padding: 10px 5px;
+  }
+}
+
+@media (max-width: 1023px) {
   .addPropertyFormContainer .image-uploading-area li {
     width: 50%;
-    padding: 10px 5px;
   }
 }
 
@@ -780,8 +1069,8 @@
 }
 
 .addPropertyFormContainer .image-uploading-area li .file-uploader {
-  width: 250px;
-  height: 200px;
+  width: 100%;
+  height: 250px;
   margin: 0 auto;
   background: #edf2f8;
   position: relative;
@@ -789,14 +1078,14 @@
   overflow: hidden;
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1424px) {
   .addPropertyFormContainer .image-uploading-area li .file-uploader {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 200px;
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1199px) {
   .addPropertyFormContainer .image-uploading-area li .file-uploader {
     width: 100%;
     height: 150px;
@@ -823,6 +1112,9 @@
   margin: -40px 0 0 -40px;
   color: #9da2a8;
   transition: color 0.4s ease;
+  -webkit-transition: color 0.4s ease;
+  -ms-transition: color 0.4s ease;
+  -moz-transition: color 0.4s ease;
 }
 
 @media (max-width: 1023px) {
@@ -853,6 +1145,9 @@
   font-size: 14px;
   line-height: 18px;
   transition: border 0.4s ease;
+  -webkit-transition: border 0.4s ease;
+  -ms-transition: border 0.4s ease;
+  -moz-transition: border 0.4s ease;
 }
 
 @media (max-width: 1199px) {
@@ -895,6 +1190,9 @@
   z-index: -1;
   opacity: 0;
   transition: z-index 0.9s ease, opacity 0.9s ease;
+  -webkit-transition: z-index 0.9s ease, opacity 0.9s ease;
+  -moz-transition: z-index 0.9s ease, opacity 0.9s ease;
+  -ms-transition: z-index 0.9s ease, opacity 0.9s ease;
 }
 
 .addPropertyFormContainer .image-uploading-area li .image-holder:after {
@@ -906,6 +1204,9 @@
   background: rgba(255, 255, 255, 0.7);
   content: '';
   transition: top 0.4s ease;
+  -webkit-transition: top 0.4s ease;
+  -moz-transition: top 0.4s ease;
+  -ms-transition: top 0.4s ease;
 }
 
 .addPropertyFormContainer .image-uploading-area li .image-holder .propertyDocumentCloseBtn {
@@ -920,6 +1221,9 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.4s ease, visibility 0.4s ease, color 0.4s ease;
+  -webkit-transition: opacity 0.4s ease, visibility 0.4s ease, color 0.4s ease;
+  -ms-transition: opacity 0.4s ease, visibility 0.4s ease, color 0.4s ease;
+  -moz-transition: opacity 0.4s ease, visibility 0.4s ease, color 0.4s ease;
   cursor: pointer;
   margin: -25px -25px 0 0;
 }
